Fix search bar in Orders page not being tapable on mobile (https://github.com/woocommerce/woocommerce-admin/pull/2384)
* Fix search bar in Orders page not being tapable on mobile

* Cleanup

* Remove unnecessary duplicated media-query

* Cleanup

--- a/plugins/woocommerce-admin/client/stylesheets/shared/_embed.scss
+++ b/plugins/woocommerce-admin/client/stylesheets/shared/_embed.scss
@@ -11,7 +11,13 @@
 	}
 
 	.wrap {
-		padding: 20px;
+		padding: 20px 20px 0;
+
+		@include breakpoint( '<782px' ) {
+			p.search-box {
+				width: calc(100% - 40px);
+			}
+		}
 	}
 
 	#woocommerce-embedded-root.is-embed-loading + #wpbody .wrap {
