--- a/plugins/woocommerce-admin/client/stylesheets/shared/_reset.scss
+++ b/plugins/woocommerce-admin/client/stylesheets/shared/_reset.scss
@@ -6,10 +6,16 @@
 	}
 
 	#wpcontent,
-	#wpbody-content {
+	&.woocommerce_page_wc-admin #wpbody-content {
 		padding: 0;
 		overflow-x: hidden !important;
 		min-height: calc(100vh - #{$adminbar-height});
+	}
+
+	@include breakpoint( '>782px' ) {
+		#wpbody-content {
+			padding: 0;
+		}
 	}
 
 	@include breakpoint( '<782px' ) {
@@ -17,6 +23,7 @@
 		.wp-responsive-open #wpbody {
 			right: -14.5em;
 		}
+
 		#wpcontent,
 		#wpbody-content {
 			min-height: calc(100vh - #{$adminbar-height-mobile});
